# hexos

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  VERSION  Vimake  armstub.S  benv  boot.img  hexos.elf  hexos.img  kernel.S  kernel.cpp  kernel.hny
buildenv/: README.md  activate  deactivate  hcc
docs/ProtectionSystem/: README.md
include/: armv8a.hpp  cppdlc.hpp  enhancecpp.hpp  fb.hpp  gpio.hpp  mbox.hpp  mmu.hpp  time.hpp  uart.hpp
scripts/: linker.ld
src/: Makefile  README.md
src/apps/: README.md
src/boot/: armv8a.S
src/drivers/: README.md
src/kernel/: Makefile  README.md  Vimake  config.json  linker.ld  main.cpp
src/kernel/hxeconfs/: aarch32.json  aarch64.json  ia32.json  mips.json  ppc.json
src/kernel/include/: mmu.hpp  platform.h  platform.hpp  ramdisk.h  rd.hpp  stdint.h  stdint.hpp  types.h  types.hpp  vmm.hpp
src/kernel/include/arch/aarch32/: README.md
src/kernel/include/arch/aarch64/: README.md  stdint.hpp
src/kernel/include/arch/amd64/: README.md
src/kernel/include/arch/arm/: cpu.hpp  stdint.hpp
src/kernel/include/arch/i686/: cpu.hpp  fb.hpp  mmu.hpp  stdint.hpp
src/kernel/include/arch/ia32/: README.md
src/kernel/include/arch/mips/: README.md
src/kernel/include/arch/ppc/: README.md
src/kernel/include/modules/: ramd.hpp
src/kernel/src/: main.c  main.cpp  mmu.cpp  platform.c  platform.cpp
src/modules/: Makefile  README.md
src/modules/initramfs/: README.md
src/modules/ramdisk/: Makefile  README.md
src/modules/ramdisk/include/: stdint.hpp  types.hpp
src/res/: font.S
(+3 files in other folders)
